# ces

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  GAMEPLAY_CORE_MODEL.md  README.md  ROADMAP.md  SOLO_ROADMAP.md  TOOLS.md  _commit_msg.txt  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: project-context.mdc
.devin/rules/: response-style.md
.github/workflows/: ci.yml  production-smoke.yml  release-image.yml
backend/: Dockerfile  main.py  requirements-dev.txt  requirements.txt  simulate_economy.py
backend/alembic/: env.py
backend/app/: database.py  models.py  seed.py
client/: city_economic_simulator.csproj  project.godot
client_tests/: ClientLogicTests.csproj  Program.cs
database/: college_exams_manager.json  economic_formulas.md  schema.sql
docs/: anime_visual_direction.md  avatar_fashion_architecture.md
scripts/: build_anime_avatar.ps1  capture_anime_avatar.ps1  capture_dashboard.ps1  check.ps1  check_secrets.py  check_targeted.ps1  dev.ps1  doctor.ps1  drill_backup_restore.ps1  godot_mcp_bridge.py  godot_mcp_stdio.py  invoke_godot_mcp.ps1  play.ps1  pwsh7.ps1  reset_dev_db.ps1  rollout_preflight.ps1  setup_godot_mcp.ps1  smoke_anime_avatar_asset.ps1  smoke_client_api_dispatch.ps1  smoke_godot_dashboard.ps1  smoke_mvp.py  smoke_production.ps1  start_backend.ps1  start_godot_mcp_bridge.ps1
secrets/: city_database_url.example.txt  grafana_admin_password.example.txt  postgres_password.example.txt  redis_password.example.txt  redis_url.example.txt
(+268 files in other folders)
