[project]
name = "city-economic-simulator"
version = "0.3.0"
description = "Backend для MVP економічного симулятора 'Місто'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "websockets>=11.0",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "ruff>=0.11.0",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "N818", "N806", "UP046"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["backend/app", "backend/main.py"]
exclude = ["backend/alembic", "**/__pycache__"]
pythonVersion = "3.13"
pythonPlatform = "Windows"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportArgumentType = false
reportReturnType = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
